# HamsterTrades

./: README.md
src/HamsterTrades.App/: App.axaml  App.axaml.cs  HamsterTrades.App.csproj  Program.cs
src/HamsterTrades.App/Configuration/: AppConstants.cs  AppKeys.cs  AppSettings.cs
src/HamsterTrades.App/Converters/: Converters.cs
src/HamsterTrades.App/Exceptions/: Exceptions.cs
src/HamsterTrades.App/Services/Settings/: ISettingsProvider.cs  SettingsProvider.cs
src/HamsterTrades.App/Services/Themes/: IThemeManager.cs  ThemeManager.cs
src/HamsterTrades.App/Utils/: LogsHandler.cs  Prelogger.cs
src/HamsterTrades.App/ViewModels/: MainWindowViewModel.cs  SettingsViewModel.cs
src/HamsterTrades.App/Views/: MainWindow.axaml  MainWindow.axaml.cs  SettingsWindow.axaml  SettingsWindow.axaml.cs
src/HamsterTrades.Core/: HamsterTrades.Core.csproj
src/HamsterTrades.Python/: HamsterTrades.Python.csproj
src/HamsterTrades.Python/PythonRuntime/: PythonRuntimeOptions.cs
src/PyHamster/: pyproject.toml
src/PyHamster/pyhamster/: __init__.py
src/PyHamster/pyhamster/base/: __init__.py  immutable_meta.py  key_enum.py
src/PyHamster/pyhamster/configuration/: __init__.py  settings.py  settingsdefault.py  settingsprovider.py
src/PyHamster/pyhamster/core/: __init__.py  constants.py  exceptions.py  keys.py
src/PyHamster/pyhamster/indicators/: __init__.py  indicator.py  indicator_options.py
src/PyHamster/pyhamster/ml/: __init__.py  gmm_regime.py  gmm_regime_map.py  gmm_regime_options.py
src/PyHamster/pyhamster/utils/: __init__.py  logger.py  logmanager.py
