[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhamster"
version = "1.0.0"
description = "Python package for HamsterTrades"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TanJingMing", email = "jingming.tan12@gmail.com"}
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/PyHamster"]

[tool.ruff]
line-length = 100
target-version = "py311"